# datasette-mcp

./: .gitignore  LICENSE  README.md  datasette_mcp_server.py  pyproject.toml
src/datasette_mcp/: __init__.py  config.py  main.py
tests/: __init__.py
